# pythonProject3

./: est_enter_sender_name.py  home_screen.py  pyproject.toml  test_assert_receiver_names.py  test_enter_buyme_website.py  test_enter_email_phone.py  test_enter_name_email.py  test_enter_password.py  test_intro_registration.py  test_logged_in.py  test_pick_business.py  test_pick_email_sms.py  test_pick_price_region_category.py  test_press_buttons.py  test_press_viysheka.py  test_reenter_password.py  test_sender_receiver_info.py
