[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["abedn <abd1512nsasra@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
utils = "^1.0.1"
config = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
